--- a/templates/core/dashboard_profile.html
+++ b/templates/core/dashboard_profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_dashboard.html' %}
 
 {% block title %}Profile - GradeBench{% endblock %}
 {% block page_title %}User Profile{% endblock %}
