--- a/templates/core/dashboard_profile.html
+++ b/templates/core/dashboard_profile.html
@@ -45,14 +45,15 @@
             </div>
         </div>
     </div>
-    
+
     <div class="col-md-8">
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title">Profile Information</h4>
             </div>
             <div class="card-body">
-                <form>
+                <form method="POST" action="{% url 'profile' %}">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6 pr-1">
                             <div class="form-group">
@@ -63,7 +64,7 @@
                         <div class="col-md-6 pl-1">
                             <div class="form-group">
                                 <label>Email address</label>
-                                <input type="email" class="form-control" value="{{ user.email }}">
+                                <input type="email" class="form-control" name="email" value="{{ user.email }}">
                             </div>
                         </div>
                     </div>
@@ -71,13 +72,13 @@
                         <div class="col-md-6 pr-1">
                             <div class="form-group">
                                 <label>First Name</label>
-                                <input type="text" class="form-control" value="{{ user.first_name }}">
+                                <input type="text" class="form-control" name="first_name" value="{{ user.first_name }}">
                             </div>
                         </div>
                         <div class="col-md-6 pl-1">
                             <div class="form-group">
                                 <label>Last Name</label>
-                                <input type="text" class="form-control" value="{{ user.last_name }}">
+                                <input type="text" class="form-control" name="last_name" value="{{ user.last_name }}">
                             </div>
                         </div>
                     </div>
@@ -92,8 +93,16 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
+                                <label>Phone Number</label>
+                                <input type="text" class="form-control" name="phone_number" value="{{ profile.phone_number|default:'' }}">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
                                 <label>About Me</label>
-                                <textarea class="form-control textarea">{{ profile.bio|default:'Write something about yourself...' }}</textarea>
+                                <textarea class="form-control textarea" name="bio">{{ profile.bio|default:'' }}</textarea>
                             </div>
                         </div>
                     </div>
@@ -199,7 +208,7 @@
             try {
                 const response = await fetch('/api/github-profile/');
                 const data = await response.json();
-                
+
                 if (data.error) {
                     console.error('Error fetching GitHub profile:', data.error);
                 } else {
@@ -210,7 +219,7 @@
                 console.error('Failed to fetch GitHub profile:', error);
             }
         }
-        
+
         // Call the function when the page loads
         fetchGitHubProfile();
     });
