--- a/templates/core/dashboard_login.html
+++ b/templates/core/dashboard_login.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no" name="viewport" />
     <title>Login - GradeBench</title>
-    
+
     <!-- Fonts and icons -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    
+
     <!-- CSS Files -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/paper-dashboard.css" rel="stylesheet" />
-    
+
     <style>
         .login-page {
             background-color: #f4f3ef;
@@ -82,7 +82,7 @@
                             <div class="text-center mb-4">
                                 <p>Welcome to GradeBench, a platform for grading code submissions</p>
                             </div>
-                            
+
                             {% if messages %}
                             <div class="messages mb-4">
                                 {% for message in messages %}
@@ -95,7 +95,7 @@
                                 {% endfor %}
                             </div>
                             {% endif %}
-                            
+
                             <div class="d-grid gap-2">
                                 <a href="{% url 'social:begin' 'github' %}" class="btn btn-block btn-github">
                                     <i class="fa fa-github mr-2"></i> Sign in with GitHub
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="login-footer">
                         <p>&copy; {% now "Y" %} GradeBench. All rights reserved.</p>
                     </div>
@@ -111,10 +111,10 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Core JS Files -->
-    <script src="/static/js/core/jquery.min.js"></script>
-    <script src="/static/js/core/popper.min.js"></script>
-    <script src="/static/js/core/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
