--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -7,22 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no" name="viewport" />
     <title>Login - GradeBench</title>
-    
+
     <!-- Fonts and icons -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    
+
     <!-- CSS Files -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/paper-dashboard.css" rel="stylesheet" />
-    
+
     <style>
         body, html {
             height: 100%;
             margin: 0;
             background-color: #f4f3ef;
         }
-        
+
         .login-page {
             height: 100vh;
             display: flex;
@@ -30,26 +30,26 @@
             align-items: center;
             justify-content: center;
         }
-        
+
         .brand-logo {
             text-align: center;
             margin-bottom: 20px;
         }
-        
+
         .brand-logo img {
             width: 80px;
             height: 80px;
             border-radius: 50%;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
-        
+
         .brand-name {
             font-size: 42px;
             font-weight: 300;
             margin: 10px 0 30px;
             color: #333;
         }
-        
+
         .login-card {
             width: 100%;
             max-width: 450px;
@@ -58,29 +58,29 @@
             background-color: white;
             margin: 0 auto;
         }
-        
+
         .card-header {
             padding: 25px 15px 15px;
             border-bottom: 1px solid #f1f1f1;
         }
-        
+
         .card-title {
             font-size: 28px;
             font-weight: 400;
             color: #333;
             margin-bottom: 0;
         }
-        
+
         .card-body {
             padding: 30px;
         }
-        
+
         .welcome-text {
             font-size: 18px;
             color: #66615b;
             margin-bottom: 30px;
         }
-        
+
         .btn-github {
             background-color: #24292e;
             color: white;
@@ -94,26 +94,26 @@
             align-items: center;
             justify-content: center;
         }
-        
+
         .btn-github i {
             margin-right: 10px;
             font-size: 20px;
         }
-        
+
         .btn-github:hover {
             background-color: #0f1114;
             color: white;
             transform: translateY(-2px);
             box-shadow: 0 7px 14px rgba(0,0,0,.1), 0 3px 6px rgba(0,0,0,.1);
         }
-        
+
         .login-footer {
             text-align: center;
             margin-top: 30px;
             color: #66615b;
             font-size: 14px;
         }
-        
+
         /* Added to ensure responsiveness */
         @media (max-width: 576px) {
             .login-card {
@@ -129,7 +129,7 @@
             <img src="/static/img/logo-small.png" alt="GradeBench Logo">
         </div>
         <h1 class="brand-name">GradeBench</h1>
-        
+
         <div class="login-card">
             <div class="card-header">
                 <h3 class="card-title text-center">Login</h3>
@@ -138,7 +138,7 @@
                 <div class="text-center mb-4">
                     <p class="welcome-text">Welcome to GradeBench, a platform for grading code submissions</p>
                 </div>
-                
+
                 {% if messages %}
                 <div class="messages mb-4">
                     {% for message in messages %}
@@ -151,21 +151,21 @@
                     {% endfor %}
                 </div>
                 {% endif %}
-                
+
                 <a href="{% url 'social:begin' 'github' %}" class="btn btn-github">
                     <i class="fa fa-github"></i> SIGN IN WITH GITHUB
                 </a>
             </div>
         </div>
-        
+
         <div class="login-footer">
             <p>&copy; {% now "Y" %} GradeBench. All rights reserved.</p>
         </div>
     </div>
-    
+
     <!-- Core JS Files -->
-    <script src="/static/js/core/jquery.min.js"></script>
-    <script src="/static/js/core/popper.min.js"></script>
-    <script src="/static/js/core/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
