--- a/templates/core/profile.html
+++ b/templates/core/profile.html
@@ -61,8 +61,9 @@
                     <div class="row">
                         <div class="col-md-6 pr-1">
                             <div class="form-group">
-                                <label>Username (disabled)</label>
-                                <input type="text" class="form-control" disabled value="{{ user.username }}">
+                                <label>Username</label>
+                                <input type="text" class="form-control" name="username" value="{{ user.username }}">
+                                <small class="form-text text-muted">Your username is your email by default</small>
                             </div>
                         </div>
                         <div class="col-md-6 pl-1">
@@ -209,6 +210,7 @@
     // This is an alternative way to update the profile using our async API
     function updateProfileAsync() {
         const data = {
+            username: document.querySelector('input[name="username"]').value,
             first_name: document.querySelector('input[name="first_name"]').value,
             last_name: document.querySelector('input[name="last_name"]').value,
             email: document.querySelector('input[name="email"]').value,
