Link Core app in Canvas App

--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -135,10 +135,10 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="{% block nav_reports %}{% endblock %}">
-                        <a href="#">
-                            <i class="nc-icon nc-chart-pie-36"></i>
-                            <p>Reports</p>
+                    <li class="{% block nav_canvas %}{% endblock %}">
+                        <a href="{% url 'canvas_dashboard' %}">
+                            <i class="nc-icon nc-palette"></i>
+                            <p>Canvas LMS</p>
                         </a>
                     </li>
                     <li class="{% block nav_grades %}{% endblock %}">
