CSS cleanup, refactoring into new classes, remove inline css testing code

--- a/templates/canvas/base.html
+++ b/templates/canvas/base.html
@@ -17,5 +17,8 @@
 {% endblock %}
 
 {% block extra_css %}
+    {% load static %}
+    <!-- Canvas custom styles -->
+    <link href="{% static 'css/canvas-custom.css' %}" rel="stylesheet" />
     {% block canvas_css %}{% endblock %}
 {% endblock %}
